syntax = "proto3";

option csharp_namespace = "SeP.Core.Proto";

package greet;

// The greeting service definition.
service Greeter {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SignIn (SignInRequest) returns (ReplingDataBase);
	rpc SignUp (SignUpRequest) returns (SignUpReplingData);
}

// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}

// The response message containing the greetings.
message HelloReply {
	string message = 1;
}

message SignInRequest{
	string login = 1;
	string password = 2;
}

message ReplingDataBase{
	bool IsSuccessed = 1;
	string error = 2;
}

message SignUpReplingData {
	bool IsSuccessed = 1;
	string error = 2;
	string NewId = 3;
}

message SignUpRequest{
	string login = 1;
	string password = 2;
	string Initials = 3;
}

